name:                geobox
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.9 && < 4.10,
                       time >= 1.6 && < 1.7,
                       tasty >= 0.11,
                       tasty-hunit >= 0.9,
                       xml >= 1.3.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Geobox.LambertTest

executable glossgui
  build-depends:       base >= 4.9 && < 4.10,
                       time >= 1.6 && < 1.7,
                       tasty >= 0.11,
                       tasty-hunit >= 0.9,
                       xml >= 1.3.14,
                       gloss == 1.11.1.1
  hs-source-dirs:      src
  main-is:             Gloss.hs
  default-language:    Haskell2010
